--- a/src/components/contactForm/contactForm.css
+++ b/src/components/contactForm/contactForm.css
@@ -28,14 +28,14 @@
 .add-contact-button {
   width: 100px;
   margin-top: 10px;
-  background-color: slateblue;
-  border: none;
+  /* background-color:rgb(144, 183, 186); */
+  border: 1px solid #19191a;
   border-radius: 50px;
   padding: 5px;
-  color: white;
+  color: rgb(11, 11, 11);
 }
-.add-contact-button:hover {
-  background-color: khaki;
-  border: 1px solid slateblue;
+ .add-contact-button:hover {
+  /* /* background-color: khaki; */
+  /* border: 1px solid slateblue;  */
   color: black;
-}
+} 
