--- a/src/components/contactList/contactList.css
+++ b/src/components/contactList/contactList.css
@@ -1,16 +1,18 @@
 .delete-button {
   margin-left: 20px;
-  background-color: slateblue;
-  color: white;
+ 
+  /* color: rgb(255, 255, 255); */
+  border: 1px solid #19191a;
   border-radius: 50px;
   padding-left: 10px;
   padding-top: 2px;
   padding-bottom: 2px;
   padding-right: 10px;
-  border: none;
+  
 }
 .delete-button:hover {
-  background-color: rgb(210, 30, 30);
+
+  color: black;
 }
 
 .contact-list-container {
@@ -20,4 +22,34 @@
 }
 .contact-list {
   width: 400px;
+}
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  outline: none;
+  cursor: pointer;
+  width: 150px;
+  height: 50px;
+  background-image: linear-gradient(to top, #D8D9DB 0%, #fff 80%, #FDFDFD 100%);
+  border-radius: 30px;
+  border: 1px solid #19191a;
+  transition: all 0.2s ease;
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 14px;
+  font-weight: 600;
+  color: #606060;
+  text-shadow: 0 1px #fff;
+}
+
+button:hover {
+  box-shadow: 0 4px 3px 1px #FCFCFC, 0 6px 8px #D6D7D9, 0 -4px 4px #CECFD1, 0 -6px 4px #FEFEFE, inset 0 0 3px 3px #CECFD1;
+}
+
+button:active {
+  box-shadow: 0 4px 3px 1px #FCFCFC, 0 6px 8px #D6D7D9, 0 -4px 4px #CECFD1, 0 -6px 4px #FEFEFE, inset 0 0 5px 3px #999, inset 0 0 30px #aaa;
+}
+
+button:focus {
+  box-shadow: 0 4px 3px 1px #FCFCFC, 0 6px 8px #D6D7D9, 0 -4px 4px #CECFD1, 0 -6px 4px #FEFEFE, inset 0 0 5px 3px #999, inset 0 0 30px #aaa;
 }
